--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script defer type="application/javascript" src="./script.js"></script>
+    <script type="module" src="./main.js"></script>
 </head>
-<body>
-<div id="root"></div>
-</body>
+    <body>
+        <div id="root"></div>
+    </body>
 </html>
