--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script defer type="application/javascript" src="./MiniReact.js"></script>
+    <script defer type="application/javascript" src="./components/Hello.js"></script>
+    <script defer type="application/javascript" src="./components/App.js"></script>
+    <script defer type="application/javascript" src="./router.js"></script>
     <script defer type="application/javascript" src="./script.js"></script>
 </head>
 <body>
