--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="./assets/main.css" />
     <script defer type="application/javascript" src="./MiniReact.js"></script>
+    <script defer type="application/javascript" src="./components/Header.js"></script>
     <script defer type="application/javascript" src="./components/Hello.js"></script>
     <script defer type="application/javascript" src="./components/App.js"></script>
     <script defer type="application/javascript" src="./router.js"></script>
