--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <!--    <script defer type="application/javascript" src="./router.js"></script>-->
 <!--    <script defer type="application/javascript" src="./script.js"></script>-->
     <link rel="stylesheet" type="text/css" href="./assets/main.css" />
-    <script defer type="application/javascript" src="./MiniReact.js"></script>
-    <script defer type="application/javascript" src="./components/Header.js"></script>
+<!--    <script defer type="application/javascript" src="./MiniReact.js"></script>-->
+<!--    <script defer type="application/javascript" src="./components/Header.js"></script>-->
 <body>
 <div id="root"></div>
 </body>
