--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script defer type="module" src="script.js"></script>
-<!--    <script defer type="application/javascript" src="./components/Hello.js"></script>-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+
+    <!--    <script defer type="application/javascript" src="./components/Hello.js"></script>-->
 <!--    <script defer type="application/javascript" src="./components/App.js"></script>-->
 <!--    <script defer type="application/javascript" src="./router.js"></script>-->
 <!--    <script defer type="application/javascript" src="./script.js"></script>-->
